--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body{
+    background: url(img/bg.jpg) repeat;
+}
+
 .title {
   margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .title h1 {
@@ -7,12 +12,8 @@
   color: #e85a71;
 }
 
-#editor {
-  margin-top: 30px;
-}
-
 #editor textarea {
-  height: 500px;
+  height: 600px;
   margin-bottom: 30px;
 }
 
@@ -21,7 +22,7 @@
 }
 
 .max-hei {
-  max-height: 500px;
+  max-height: 600px;
   overflow: auto;
 }
 
@@ -33,4 +34,17 @@
   position: absolute;
   right: 40px;
   top: 10px;
+}
+
+.shado{
+  border-radius: 6px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  -o-box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+
+.content-full {
+  margin-top: 15px;
 }
